<resources>
    <string name="app_name">SmartSecureApp</string>
    <string name="emergency">EMERGENCY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_location">Location</string>
    <string name="title_timer">Timer</string>
    <string name="title_setting">Setting</string>
    <string name="emergency_one">Please note as soon as the emergency button is pressed your</string>
    <string name="emergency_two">selected contacts will be notifed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition">Terms and Conditions</string>
    <string name="copyright">Copyright \u00a9 Enabled 2022. All Rights Reserved.</string>
    <string name="location">Live Location</string>
    <string name="settings">SETTINGS</string>
    <string name="personal">Personal</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="your_new_password">Your new password</string>
    <string name="retype_your_new_password">Retype your new password</string>
    <string name="subject">Subject</string>
    <string name="whats_app">WhatsApp</string>
    <string name="sms">SMS</string>
    <string name="siren">Siren</string>
    <string name="history">History</string>
    <string name="password_reset">Password Reset</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="personal_one">PERSONAL</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="contact1">Contact 1</string>
    <string name="delete">Delete</string>
    <string name="contact2">Contact 2</string>
    <string name="contact3">Contact 3</string>
    <string name="contact4">Contact 4</string>
    <string name="contact5">Contact 5</string>
    <string name="call_one">CALL</string>
    <string name="email_one">EMAIL</string>
    <string name="email1">Email 1</string>
    <string name="email2">Email 2</string>
    <string name="email3">Email 3</string>
    <string name="email4">Email 4</string>
    <string name="email5">Email 5</string>
    <string name="whats_app_one">WHATSAPP</string>
    <string name="history_one">HISTORY</string>
    <string name="recording1">Recording 1</string>
    <string name="download">Download</string>
    <string name="recording2">Recording 2</string>
    <string name="recording3">Recording 3</string>
    <string name="recording4">Recording 4</string>
    <string name="recording5">Recording 5</string>
    <string name="password">PASSWORD</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="password_text">Please enter your registered email and press\n submit to reset your password. To reset password\n please check your email.</string>
    <string name="contact_us_one">CONTACT US</string>
    <string name="reset_your_password">Let\'s reset your password</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="sign_out_one">SIGN OUT</string>
    <string name="otp">Enter OTP</string>
    <string name="otp_text">Please enter OTP that we send you on your email address.</string>
    <string name="sign_text">Please enter your password below and press submit\n to sign out of your account</string>
    <string name="delete_text">Please enter your password below and press submit\n to delete your account</string>
    <string name="timer">TIMER</string>
    <string name="set_timer">Set Timer</string>
    <string name="timer_text">Please Note once the timer has started you\'ll need the</string>
    <string name="timer_text_one">passcode to deactivate it</string>
    <string name="Sign_in">Sign In</string>
    <string name="signIn_text">Let\'s get you logged in</string>
    <string name="create_account">Create Account here!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Sign_up">Sign Up</string>
    <string name="signUp_text">Create an Account. it\'s free!</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="deactivate">To Deactivate Emergency, Please enter password below &amp; press confirm</string>
    <string name="other">Other</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_manual_contact">Manual</string>
    <string name="add_contact">Add</string>
    <string name="no_contact">No contact added.</string>
    <string name="no_history">No history added.</string>
    <string name="delete_item">Delete</string>
    <string name="delete_are_you_sure">Are you sure to Delete your account? This action can\'t be reverserable</string>
    <string name="delete_account_dialog">Delete Account</string>
</resources>