<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout"
    android:background="@color/black"
    tools:context=".Activity.fragment.EmergencyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_emergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/emergency"
                android:textColor="@color/txt_red"
                android:textSize="40dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_emergency_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/emergency_one"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <TextView
                android:id="@+id/txt_emergency_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/emergency_two"
                android:textColor="@color/white"
                android:textSize="13dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:id="@+id/emergencyButton"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/mask_group" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_secure"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/smart_secure_icon" />
                <TextView
                    android:id="@+id/txt_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/white"
                    android:textSize="13dp" />
                <LinearLayout
                    android:id="@+id/Linear_policy_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="60dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/txt_red"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:text="|"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_term_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/term_condition"
                        android:textColor="@color/txt_red"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </ProgressBar>

</RelativeLayout>