<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.activity.SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Sign_up"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/signUp_text"
            android:textColor="@color/txt_red"
            android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:src="@drawable/user_icon"
                        app:tint="@color/white" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/first_name"
                        android:id="@+id/firstName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="2dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/user_icon"
                        app:tint="@color/white" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/last_name"
                        android:id="@+id/lastName"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/phone_icon" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/phone_number"
                        android:id="@+id/phoneNumber"
                        android:inputType="phone"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:id="@+id/male"
                        android:layout_marginEnd="15dp"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:id="@+id/female"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:id="@+id/other"
                        android:layout_marginStart="15dp"
                        android:textColor="@color/white"
                        android:textSize="16dp" />


                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="2dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/email_icon"
                        app:tint="@color/grey" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/email"
                        android:id="@+id/emailId"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/lock_icon"
                        android:layout_gravity="center_vertical"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="Password"
                        android:id="@+id/password"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/lock_icon"
                        android:layout_gravity="center_vertical"/>

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:id="@+id/confirmPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="16dp" />


                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/btn_red"
                    android:text="Submit"
                    android:textAllCaps="true"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:cornerRadius="30dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/img_secure"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                       android:layout_gravity="center"
                        android:src="@drawable/smart_secure_icon" />
                    <TextView
                        android:id="@+id/txt_copyright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/copyright"
                        android:textColor="@color/white"
                        android:textSize="13dp" />
                    <LinearLayout
                        android:id="@+id/Linear_policy_terms"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:visibility="gone"
                            android:text="@string/privacy_policy"
                            android:textColor="@color/txt_red"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center"
                            android:text="|"
                            android:visibility="gone"
                            android:textColor="@color/white"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_term_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:gravity="center"
                            android:text="@string/term_condition"
                            android:textColor="@color/txt_red"
                            android:textSize="12dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </ProgressBar>

</RelativeLayout>