<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Sign_in"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signIn_text"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/txt_red"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/user_icon"
                    android:layout_gravity="center_vertical"
                    app:tint="@color/white" />

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="@string/email"
                    android:backgroundTint="@android:color/transparent"
                    android:id="@+id/email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/lock_icon"
                    android:layout_gravity="center_vertical"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:hint="Password"
                    android:backgroundTint="@android:color/transparent"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="16dp" />


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#8BBD51"
                android:text="Login"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/txt_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:id="@+id/forgotPassword"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img_secure"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:src="@drawable/smart_secure_icon" />
                <TextView
                    android:id="@+id/txt_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/white"
                    android:textSize="13dp" />
                <LinearLayout
                    android:id="@+id/Linear_policy_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_privacy_policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="gone"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/txt_red"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center"
                        android:text="|"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_term_condition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/term_condition"
                        android:textColor="@color/txt_red"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </ProgressBar>


</RelativeLayout>